# WasmCodeMobility

./: README.md
ai-history/: run.sh
ai-history/guest/src/: lib.rs
ai-history/guest/wit/: witfile.wit
ai-history/host/: data.json
ai-history/host/src/: main.rs
aiModel-cache/guest-gpt/: Cargo.toml
aiModel-cache/guest-gpt/src/: lib.rs
aiModel-cache/host-gpt/: Cargo.toml
aiModel-cache/host-gpt/src/: main.rs
gpt/guest-gpt/wit/: witfile.wit
gpt/host-gpt/: data.json
guest/: Cargo.toml
guest-c/: guest.wasm  main.c  my-component.wasm  my-core.wasm  myworld.c  myworld.h  witfile.wit
guest-cache/src/: lib.rs
guest-cache/wit/: witfile.wit
guest/src/: lib.rs
guest/wit/: witfile.wit
host/: Cargo.toml
host/src/: main.rs
http-cache/: run.sh
http-cache/guest/src/: lib.rs
http-cache/guest/wit/: witfile.wit
http-cache/host/src/: main.rs
somethings/: main.rs
wasip/guest-cache/: Cargo.toml
wasip/guest-cache/src/: lib.rs
wasip/host/: Cargo.toml
