[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.44.1"
url = "2.5.4"
wasi-common = "30.0.2"
wasmtime = "30.0.2"
wasmtime-wasi = "30.0.2"
wit-bindgen = "0.39.0"
wit-component = "0.226.0"
