[package]
name = "guest-cache"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[toolchain]
channel = "nightly"

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = "2.5.4"
wit-bindgen = "0.40.0"
anyhow = "1.0.96"
wasi-common = "30.0.2"
wasmtime = "30.0.2"
wasmtime-wasi = "30.0.2"
wit-component = "0.226.0"